css/style.css
:root {
    --primary: #E57C23;
    --bg: #025464;
    --secondary: #F8F1F1;
  }
  
  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    outline: none;
    border: none;
    text-decoration: none;
  }
  
  body {
    font-family: "Poppins", sans-serif;
    background-color: var(--bg);
    color: var(--secondary);
    /* min-height: 3000px; */
    overflow: hidden;
  }
  

  .navbar .navbar-logo {
    font-size: 1.5rem;
    font-weight: 700;
    color: white;
    font-style: italic;
    text-decoration: none;
  }
  
  .navbar .navbar-logo span {
    color: var(--primary);
  }
  
  .navbar .navbar-nav a {
    color: var(--secondary);
    display: inline-block;
    font-size: 1.2rem;
    margin: 0 1rem;
  }
  
  .navbar .navbar-nav .nav-link:hover {
    color: var(--primary);
  }
  
  .navbar .navbar-nav .nav-link::after {
    content: "";
    display: block;
    padding-bottom: 0.5rem;
    border-bottom: 0.1rem solid var(--primary);
    transform: scaleX(0);
    transition: 0.2s linear;
  }

  .navbar .navbar-nav .nav-link:hover::after {
    transform: scaleX(0.5);
  }


  .navbar .navbar-nav .dropdown {
    font-size: 50%;
  }
  .navbar .navbar-nav .dropdown .dropdown-menu{
    background-color: var(--bg);
  }

  .navbar .navbar-nav .dropdown .dropdown-menu .dropdown-item{
    color: var(--secondary);
    padding-left: 0;
  }

  .navbar .navbar-nav .dropdown .dropdown-menu .dropdown-item:hover{
    background-color: transparent;
    color: var(--primary);
    transition: 0.2s linear;
  }

  .navbar .navbar-nav .dropdown .dropdown-toggle::after {
    display: none;
  }


  .cart {
    margin-right: 3rem;
  }
  .cart, .user {
    color: var(--secondary);
  }

  .cart:hover, .user:hover {
    color:#E57C23;
    transition: 0.2s linear;
  }
  

  
  /* Hero Section */
  .hero {
    min-height: 100vh;
    display: flex;
    align-items: center;
    background-image: url("../img/header-bg.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right;
    position: relative;
  }
  
  .hero::after {
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    height: 30%;
    bottom: 0;
  }
  
  .hero .content {
    padding: 1.4rem 7%;
    max-width: 60rem;
  }
  
  .hero .content h1 {
    font-size: 3em;
    color: white;
    text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
    line-height: 1.2;
  }
  
  .hero .content h1 span {
    color: var(--primary);
  }
  
  .hero .content p {
    font-size: 1.6rem;
    margin-top: 1rem;
    line-height: 1.4;
    font-weight: 100;
    text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
    mix-blend-mode: difference;
  }
  
  .hero .content .cta {
    margin-top: 1rem;
    display: inline-block;
    padding: 1rem 3rem;
    font-size: 1.4rem;
    color: black;
    background-color: var(--primary);
    border-radius: 0.5rem;
    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
    text-decoration: none;
  }
  
  .hero .content .cta:hover {
    color:#F8F1F1;
    transition: 0.3s;
    transform: scale(1.1);
  }
  /* About Section */
  .about,
  .menu,
  .review {
    padding: 8rem 7% 1.4rem;
    margin-bottom: 3rem;
  }
  
  .about h2,
  .menu h2,
  .review h2 {
    text-align: center;
    font-size: 2.6rem;
    font-weight: bold;
    margin-bottom: 3rem;
  }
  
  .about h2 span,
  .menu h2 span,
  .review h2 span {
    color: var(--primary);
  }

  .about h3 {
    margin-top: 2rem;
    margin-bottom: 3rem;
    font-size: 2rem;
    font-weight: 700;
  }
  
  /* Menu Section */
  .menu h2 {
    margin-bottom: 2rem;
    
  }
  .menu p {
    text-align: center;
    max-width: 30rem;
    margin: auto;
    font-weight: 100;
    line-height: 1.6;
  }


  /* Review Section*/
  .review h2 {
    margin-bottom: 2rem;
    
  }
  .review p {
    text-align: center;
    font-weight: bold;
    max-width: 30rem;
    margin: auto;
    font-weight: 100;
    line-height: 1.6;
  }

  .review .card {
    border-color: #025464;
  }
  .review .card .card-body {
    background-color: #025464;
    color:#F8F1F1;
  }

  .review .card .card-body .card-text {
    font-weight: 700;
  }

  .review .card .card-body .card-text span {
    font-weight: 700;
    color:#E57C23
  }

  .review .card .card-body .cta {
    margin-top: 1rem;
    display: inline-block;
    padding: 1rem 3rem;
    font-size: 1rem;
    color: black;
    background-color: var(--primary);
    border-radius: 0.5rem;
    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
    text-decoration: none;
  }
  
  .review .card .card-body .cta:hover {
    color:#F8F1F1;
    transition: 0.3s;
    transform: scale(1.1);
  }

  /* Animation */
  .reveal {
    position: relative;
    transform: translateY(150px);
    opacity: 0;
  }

  .reveal.active {
    transform: translateY(10px);
    opacity: 1;
    transition: all 2s ease
  }

  /* Form */
   .form-custom {
    margin: 5% 35%;
    padding: 2% 2%;
    border: solid 2px black;
   }
   
   .form-custom h2 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: bold;
    margin-bottom: 2.5rem;
   }

   .form-custom h2 span {
    color: var(--primary);
   }

   .btn-submit, .btn-delete {
    margin-top: 1rem;
    display: inline-block;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    font-weight: 500;
    color: rgb(255, 255, 255);
    background-color: var(--primary);
    border-radius: 0.4rem;
    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5); 
    text-decoration: none;
   }

   .btn-submit:hover,
   .btn-delete:hover {
    background-color: #c46b1e;
    transition: 0.2s;
   }

   /* See-Review Secton */
   .see-review h1 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: bold;
    margin-bottom: 2.5rem;
   }

   .see-review .box-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, 33rem);
    gap:1.5rem;
    justify-content: center;
    align-items: flex-start;
  }

  .see-review .box-container .box{
    background-color: var(--secondary);
    border-radius: .5rem;
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1); 
    border: .2rem solid black;
    padding:2rem;
    padding-top: 1rem;
 }
 
 .see-review .box-container .box p{
    padding: .5rem 0;
    font-size: 1.5rem;
    font-weight: 400;
    color: black;
 }
 
 .see-review .box-container .box p span{
    color:var(--primary);
 }

 .products h1 {
    text-align: center;
    color: var(--secondary);
    font-weight: 700;
    margin-bottom: 1rem;

}

.products h1 span {
  color: var(--primary);
}

.products .box-container{
  display: grid;
  grid-template-columns: repeat(auto-fit, 30rem);
  justify-content: center;
  align-items: flex-start;
  gap:1.5rem;
}

 .products .box-container .box {
    border: .2rem solid black;
    padding: 1.5rem;
    position: relative;
    overflow: hidden;
 }

 .products .box-container .box img{
    height: 10rem;
    width: 100%;
    object-fit: contain;
    margin-bottom: 1rem;
  }

 .products .box-container .box .shopping-cart{
    position: absolute;
    top:1rem;
    height: 4.5rem;
    width: 4.5rem;
    line-height: 4.3rem;
    border: .2rem solid black;;
    background-color: var(--bg);
    cursor: pointer;
    font-size: 2rem;
    color:var(--secondary);
    transition: .2s linear;
    text-align: center;
    right: -10rem;
  }

  .products .box-container .box .shopping-cart:hover{
    background-color: var(--secondary);
    color:var(--primary);
    right: 1rem;
  }

  .products .box-container .box .name{
    font-size: 2.3rem;
    color:var(--secondary);
    font-weight: 600;
    margin:1rem 0;
 }
 
 .products .box-container .box .flex{
    display: flex;
    align-items: center;
    gap:1rem;
    margin-top: 1.5rem;
 }
 
 .products .box-container .box .flex .price{
    margin-right: auto;
    font-size: 1.5rem;
    color:var(--secondary);
 }
 
 .products .box-container .box .flex .price span{
    color:var(--primary);
    font-size: 1.5rem;
 }
 
 .products .box-container .box .flex .qty{
    padding:1rem;
    border:.2rem solid black;;
    font-size: 1rem;
    color:black;
 }

 .products .box-container .box .flex .cart {
    background-color: var(--bg);
    color:#F8F1F1;
    margin-right: 0;
 }

 .products .box-container .box .flex .cart:hover {
  background-color: var(--bg);
  color:var(--primary);
}
  


 .empty {
    border:.2rem solid black;
    border-radius: .5rem;
    background-color: var(--secondary);
    font-weight: bold;
    padding:1.5rem;
    text-align: center;
    width: 100%;
    font-size: 2rem;
    text-transform: capitalize;
    color:var(--primary);
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
  }

  
  /* Bootstraps override */

  /* Media Queries */
  
  /* Laptop */
  @media (max-width: 1366px) {
    html {
      font-size: 75%;
    }
  }
  
  /* Tablet */
  @media (max-width: 768px) {
    html {
      font-size: 62.5%;
    }

    .form-custom {
      margin: 5% 25%;
      padding: 5% 5%;
      border: solid 2px black;
     }

  } 
  
  /* Mobile Phone */
   @media (max-width: 450px) {
    html {
      font-size: 55%;
      
      .form-custom {
        margin: 5% 20%;
        padding: 5% 5%;
        border: solid 2px black;
       }
    }
  }
  

